--- a/package.json
+++ b/package.json
@@ -9,15 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/bangers": "^5.2.5",
+    "@fontsource/bungee": "^5.2.5",
+    "@fontsource/bungee-inline": "^5.2.5",
+    "@fontsource/bungee-shade": "^5.2.5",
+    "@fontsource/monoton": "^5.2.5",
+    "@fontsource/paytone-one": "^5.2.5",
+    "@fontsource/press-start-2p": "^5.2.5",
+    "@fontsource/righteous": "^5.2.5",
+    "@fontsource/rubik-marker-hatch": "^5.2.5",
+    "@fontsource/rubik-mono-one": "^5.2.5",
+    "@fontsource/rubik-puddles": "^5.2.5",
+    "@fontsource/russo-one": "^5.2.5",
+    "@fontsource/space-mono": "^5.2.5",
+    "@fontsource/vt323": "^5.2.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-three/fiber": "^9.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.18.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
