--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
